Eliminiating overflow change; no longer necessary since popups have been eliminated.

--- a/oxtail/media/css/poligraft-rapportive.css
+++ b/oxtail/media/css/poligraft-rapportive.css
@@ -131,7 +131,3 @@ ul.pg-contrib-list li {
 .pg-panel-header a {
     color: #f7dd52;
 }
-
-.iw {
-    overflow: visible !important;
-}
